--- a/views/training.ejs
+++ b/views/training.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>NTRO Training Programs</title>
+    <title>Training Programs</title>
     <link rel="stylesheet" href="training.css">
 </head>
 <body>
